@@ -1,25 +1,6 @@
-/**
- * (c) 2002-2021 JADAPTIVE Limited. All Rights Reserved.
- *
- * This file is part of the Maverick Synergy Java SSH API.
- *
- * Maverick Synergy is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Maverick Synergy is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with Maverick Synergy.  If not, see <https://www.gnu.org/licenses/>.
- */
 package com.sshtools.common.auth;
 
 import java.io.IOException;
-import java.net.InetAddress;
 import java.nio.ByteBuffer;
 
 import com.sshtools.common.logger.Log;
@@ -77,7 +58,7 @@ public class PublicKeyAuthentication<C extends Context> implements Authenticatio
 	}
 
 	private SshPublicKey lookupAuthorizedKey(String algorithm, byte[] keyblob,
-			SshConnection con, InetAddress remoteAddress, boolean verify) {
+			SshConnection con, String remoteAddress, boolean verify) {
 
 		try {
 			SshPublicKey key = SshPublicKeyFileFactory.decodeSSH2PublicKey(
@@ -161,7 +142,7 @@ public class PublicKeyAuthentication<C extends Context> implements Authenticatio
 					signature = bar.readBinaryString();
 
 					SshPublicKey key = lookupAuthorizedKey(algorithm, keyblob,
-							con, con.getRemoteAddress(), verify);
+							con, con.getRemoteIPAddress(), verify);
 					if (key != null) {
 
 						// string session identifier
@@ -187,7 +168,9 @@ public class PublicKeyAuthentication<C extends Context> implements Authenticatio
 
 							byte[] data = baw.toByteArray();
 
-							if (key.verifySignature(signature, data)) {
+							PublicKeyAuthenticationVerifier verifier = transport.getContext().getPolicy(PublicKeyAuthenticationVerifier.class);
+
+							if (verifier.verifySignature(key, signature, data)) {
 								authentication.completedAuthentication();
 							} else {
 								authentication.failedAuthentication();
@@ -207,9 +190,9 @@ public class PublicKeyAuthentication<C extends Context> implements Authenticatio
 					Integer count = (Integer) con.getProperty("publickey.max.verify");
 
 					if (count == null)
-						count = new Integer(1);
+						count = Integer.valueOf(1);
 					else
-						count = new Integer(count.intValue() + 1);
+						count = Integer.valueOf(count.intValue() + 1);
 
 					con.setProperty("publickey.max.verify", count);
 
@@ -226,7 +209,7 @@ public class PublicKeyAuthentication<C extends Context> implements Authenticatio
 					 * Simply look for a match in the users authorized keys file
 					 */
 					if (lookupAuthorizedKey(algorithm, keyblob, con,
-							con.getRemoteAddress(), verify) != null) {
+							con.getRemoteIPAddress(), verify) != null) {
 
 						authentication.discardAuthentication();
 						
