@@ -1,35 +1,18 @@
-/**
- * (c) 2002-2021 JADAPTIVE Limited. All Rights Reserved.
- *
- * This file is part of the Maverick Synergy Java SSH API.
- *
- * Maverick Synergy is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Maverick Synergy is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with Maverick Synergy.  If not, see <https://www.gnu.org/licenses/>.
- */
 package com.sshtools.synergy.ssh;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.ServiceLoader;
 import java.util.Vector;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
-import java.util.concurrent.TimeUnit;
 
 import com.sshtools.common.forwarding.ForwardingPolicy;
 import com.sshtools.common.logger.Log;
@@ -44,8 +27,9 @@ import com.sshtools.common.ssh.components.SshCipher;
 import com.sshtools.common.ssh.components.SshHmac;
 import com.sshtools.common.ssh.components.SshPublicKey;
 import com.sshtools.common.ssh.components.jce.JCEComponentManager;
-import com.sshtools.common.ssh.compression.NoneCompression;
+import com.sshtools.common.ssh.compression.NoneCompression.NoneCompressionFactory;
 import com.sshtools.common.ssh.compression.SshCompression;
+import com.sshtools.common.ssh.compression.SshCompressionFactory;
 import com.sshtools.common.util.ByteBufferPool;
 import com.sshtools.synergy.nio.ConnectRequestFuture;
 import com.sshtools.synergy.nio.DefaultSocketConnectionFactory;
@@ -164,6 +148,9 @@ public abstract class SshContext extends ProtocolContext implements
 	/** ED25519 Public key */
 	public static final String PUBLIC_KEY_ED25519 = "ssh-ed25519";
 	
+	/** ED25519 Public key */
+	public static final String PUBLIC_KEY_ED448 = "ssh-ed448";
+	
 	/** SSH2 RSA Public Key **/
 	public static final String PUBLIC_KEY_SSHRSA = "ssh-rsa";
 	
@@ -205,6 +192,7 @@ public abstract class SshContext extends ProtocolContext implements
 	protected ComponentFactory<SshHmac> macCS;
 	protected ComponentFactory<SshHmac> macSC;
 	protected ComponentFactory<SshPublicKey> publicKeys;
+	protected ComponentFactory<SshPublicKey> signatures;
 
 	protected String prefCipherCS = CIPHER_AES256_CTR;
 	protected String prefCipherSC = CIPHER_AES256_CTR;
@@ -229,7 +217,7 @@ public abstract class SshContext extends ProtocolContext implements
 	protected SshEngine daemon;
 
 	protected String softwareVersionComments = "MaverickSynergy";
-
+	protected boolean extendedIdentificationSanitization = true;
 	protected boolean killTunnelsOnRemoteForwardingCancel = false;
 	
 	protected boolean sendIgnorePacketOnIdle = false;
@@ -255,8 +243,8 @@ public abstract class SshContext extends ProtocolContext implements
 	String httpRedirectUrl;
 	
 	Map<Class<?>,Object> policies = new HashMap<>();
-	
-	AuthenticatedFuture authenticatedFuture = new AuthenticatedFuture();
+
+	private boolean sha1SignaturesSupported = true;
 	
 	/** Constructs a default context but does not set the daemon 
 	 * @param componentManager 
@@ -279,18 +267,22 @@ public abstract class SshContext extends ProtocolContext implements
 		macSC.configureSecurityLevel(securityLevel);
 		publicKeys = ComponentManager.getDefaultInstance().supportedPublicKeys();
 		publicKeys.configureSecurityLevel(securityLevel);
+		signatures = ComponentManager.getDefaultInstance().supportedPublicKeys();
+		signatures.configureSecurityLevel(securityLevel);
 
 		try {
 
 			compressionsCS = new ComponentFactory<SshCompression>(componentManager);
-			compressionsCS.add(COMPRESSION_NONE, NoneCompression.class);
-
-			JCEComponentManager.getDefaultInstance().loadExternalComponents("zip.properties", compressionsCS);
-			
 			compressionsSC = new ComponentFactory<SshCompression>(componentManager);
-			compressionsSC.add(COMPRESSION_NONE, NoneCompression.class);
 			
-			JCEComponentManager.getDefaultInstance().loadExternalComponents("zip.properties", compressionsSC);
+			compressionsCS.add(new NoneCompressionFactory());
+			compressionsSC.add(new NoneCompressionFactory());
+			
+			for(var compress : ServiceLoader.load(SshCompressionFactory.class, 
+					JCEComponentManager.getDefaultInstance().getClassLoader())) {
+				compressionsCS.add(compress);
+				compressionsSC.add(compress);
+			}
 
 		} catch (Throwable t) {
 			throw new IOException(t.getMessage() != null ? t.getMessage() : t
@@ -335,11 +327,11 @@ public abstract class SshContext extends ProtocolContext implements
 	public <P> P getPolicy(Class<P> clz) {
 		try {
 			if(!policies.containsKey(clz)) {
-				policies.put(clz, clz.newInstance());
+				policies.put(clz, clz.getConstructor().newInstance());
 			}
 			
 			return (P) policies.get(clz);
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			throw new IllegalArgumentException(e);
 		}
 	}
@@ -422,6 +414,9 @@ public abstract class SshContext extends ProtocolContext implements
 	}
 
 
+	public ComponentFactory<SshPublicKey> getSupportedSignatures() {
+		return signatures;
+	}
 
 
 	/**
@@ -530,7 +525,11 @@ public abstract class SshContext extends ProtocolContext implements
 	 * @return String
 	 */
 	public String getSoftwareVersionComments() {
-		return softwareVersionComments;
+		if(extendedIdentificationSanitization) {
+			return softwareVersionComments.replace(' ', '_').replace('-', '_');
+		} else {
+			return softwareVersionComments;
+		}
 	}
 
 	/**
@@ -670,7 +669,13 @@ public abstract class SshContext extends ProtocolContext implements
 		return killTunnelsOnRemoteForwardingCancel;
 	}
 
+	public boolean isExtendedIdentificationSanitization() {
+		return extendedIdentificationSanitization;
+	}
 
+	public void setExtendedIdentificationSanitization(boolean extendedIdentificationSanitization) {
+		this.extendedIdentificationSanitization = extendedIdentificationSanitization;
+	}
 
 	/**
 	 * <p>
@@ -1298,13 +1303,8 @@ public abstract class SshContext extends ProtocolContext implements
 
 	public void shutdown() {
 		if(executor != null) {
-			executor.shutdown();
-			try {
-				executor.awaitTermination(30, TimeUnit.SECONDS);
-			} catch (InterruptedException e) {
-			} finally {
-				executor = null;
-			}
+			executor.shutdownNow();
+			executor = null;
 		}
 	}
 
@@ -1395,7 +1395,11 @@ public abstract class SshContext extends ProtocolContext implements
 		return getPolicy(ForwardingPolicy.class);
 	}
 
-	protected AuthenticatedFuture getAuthenticatedFuture() {
-		return authenticatedFuture;
+	public boolean isSHA1SignaturesSupported() {
+		return sha1SignaturesSupported;
+	}
+	
+	public void setSHA1SignaturesSupported(boolean sha1SignaturesSupported) {
+		this.sha1SignaturesSupported = sha1SignaturesSupported;
 	}
 }
