@@ -1,24 +1,7 @@
-/**
- * (c) 2002-2021 JADAPTIVE Limited. All Rights Reserved.
- *
- * This file is part of the Maverick Synergy Java SSH API.
- *
- * Maverick Synergy is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Maverick Synergy is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with Maverick Synergy.  If not, see <https://www.gnu.org/licenses/>.
- */
 package com.sshtools.server.vsession;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -48,11 +31,19 @@ public abstract class CommandFactory<T extends Command> {
 
 	public CommandFactory<T> installCommand(Class<? extends T> cls) {
 		try {
-			T c = cls.newInstance();
+			T c = cls.getConstructor().newInstance();
 			commands.put(c.getCommandName(), cls);
 		} catch (InstantiationException e) {
 			throw new IllegalStateException(e.getMessage(), e);
 		} catch (IllegalAccessException e) {
+			throw new IllegalStateException(e.getMessage(), e);
+		} catch (IllegalArgumentException e) {
+			throw new IllegalStateException(e.getMessage(), e);
+		} catch (InvocationTargetException e) {
+			throw new IllegalStateException(e.getMessage(), e);
+		} catch (NoSuchMethodException e) {
+			throw new IllegalStateException(e.getMessage(), e);
+		} catch (SecurityException e) {
 			throw new IllegalStateException(e.getMessage(), e);
 		}
 		return this;
@@ -71,18 +62,18 @@ public abstract class CommandFactory<T extends Command> {
 		return commands.containsKey(command);
 	}
 	
-	public T createCommand(String command, SshConnection con) throws UnsupportedCommandException, IllegalAccessException, InstantiationException, IOException, PermissionDeniedException {
+	public T createCommand(String command, SshConnection con) throws UnsupportedCommandException, IllegalAccessException, InstantiationException, IOException, PermissionDeniedException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
 		return newInstance(command, con);
 	}
 	
 	protected T newInstance(String command, SshConnection con) throws UnsupportedCommandException, IllegalAccessException,
-			InstantiationException, IOException, PermissionDeniedException {
+			InstantiationException, IOException, PermissionDeniedException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
 		if (!commands.containsKey(command)) {
 			throw new UnsupportedCommandException(command + " is not a supported command");
 		}
 
 		Class<? extends T> cls = commands.get(command);
-		T c = cls.newInstance();
+		T c = cls.getConstructor().newInstance();
 		
 		configureCommand(c, con);
 		
